--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.navbar-background{
+  background-image: -webkit-linear-gradient(top,rgba(0,0,0,.7) 10%,rgba(0,0,0,0));
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
