--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -15,4 +16,8 @@
 
 .navbar-background{
   background-image: -webkit-linear-gradient(top,rgba(0,0,0,.7) 10%,rgba(0,0,0,0));
+}
+.banner-fade{
+  height: 7.4rem;
+  background-image: linear-gradient(180deg,transparent,rgba(37,37,37,.61),#111);
 }
