--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -7,15 +7,18 @@
 }
 .react-multiple-carousel__arrow--left{
     left: 0vw;
-    min-width: 4vw;
-    min-height: 34vw;
 }
 .react-multiple-carousel__arrow--right{
     right: 0vw;
-    min-width: 3.7vw;
-    min-height: 34vw;
 }
 .react-multiple-carousel__arrow{
-    border-radius: 0;
-    
+    border-radius: 0.375rem;
+    height: 100%;
+    min-width: 3.9vw;
+}
+.react-multiple-carousel__arrow:hover:before{
+    transform: scale(2);
+    font-weight: bold;
+    /* font-size: 40px; */
+    color: white;
 }
