--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -22,3 +22,15 @@
     /* font-size: 40px; */
     color: white;
 }
+.movie:hover{
+    transform: scale(1.2);
+    z-index: 1;
+    border-radius: 0.375rem;
+    transition: transform .4s;
+}
+.react-multi-carousel-list{
+    overflow: unset;
+}
+.image-item{
+    transition: transform .4s;
+}
