--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -3,16 +3,18 @@
     border-radius: 0.375rem;
     padding-left: 0.2vw;
     padding-right: 0.2vw;
-    cursor: pointer
+    cursor: pointer;
+    width: 14.93vw !important;
 }
 .react-multiple-carousel__arrow--left{
     left: 0vw;
 }
 .react-multiple-carousel__arrow--right{
     right: 0vw;
+    min-width: 4.7vw !important;
 }
 .react-multiple-carousel__arrow{
-    border-radius: 0.375rem;
+    border-radius: 0rem;
     height: 100%;
     min-width: 3.9vw;
 }
@@ -23,7 +25,7 @@
     color: white;
 }
 .movie:hover{
-    transform: scale(1.2);
+    transform: scale(1.5);
     z-index: 1;
     border-radius: 0.375rem;
     transition: transform .4s;
@@ -33,4 +35,7 @@
 }
 .image-item{
     transition: transform .4s;
+}
+.image{
+    height: 100%;
 }
