--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -25,6 +25,7 @@
     border-radius: 0rem;
     height: 100%;
     min-width: 6vw;
+    display: none;
 }
 
 .react-multiple-carousel__arrow:hover:before{
@@ -41,6 +42,9 @@
 }
 .react-multi-carousel-list{
     overflow: unset;
+}
+.react-multi-carousel-list:hover .react-multiple-carousel__arrow{
+    display: block;
 }
 .image-item{
     transition: transform .4s;
