--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -35,13 +35,22 @@
     color: white;
 }
 .movie:hover{
-    transform: scale(1.5);
+    transform: scale(1.1);
     z-index: 1;
     border-radius: 0.375rem;
     transition: transform .4s;
 }
+.movie:hover .trailer-modal{
+    display: block !important;
+    transform: scale(1.4);
+}
+.trailer-modal{
+    -webkit-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
+    -moz-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
+    box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
+}
 .react-multi-carousel-list{
-    overflow: unset;
+    overflow: unset !important;    
 }
 .react-multi-carousel-list:hover .react-multiple-carousel__arrow{
     display: block;
