--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -40,15 +40,19 @@
     border-radius: 0.375rem;
     transition: transform .4s;
 }
+/* .displayBlock{
+    display: block !important;
+    transform: scale(1.4);
+} */
 .movie:hover .trailer-modal{
     display: block !important;
     transform: scale(1.4);
 }
-.trailer-modal{
-    /* -webkit-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
+/* .trailer-modal{
+    -webkit-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
     -moz-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
-    box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px; */
-}
+    box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
+} */
 .react-multi-carousel-list{
     overflow: unset !important;    
 }
