--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -34,33 +34,41 @@
     /* font-size: 40px; */
     color: white;
 }
-.movie:hover{
-    transform: scale(1.1);
-    z-index: 1;
-    border-radius: 0.375rem;
-    transition: transform .4s;
+
+.image-item:hover .trailer-modal{
+    display: block ;
 }
-/* .displayBlock{
-    display: block !important;
-    transform: scale(1.4);
-} */
-.movie:hover .trailer-modal{
-    display: block !important;
-    transform: scale(1.4);
+@keyframes headerNotyGrowth{
+    from{
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
 }
-/* .trailer-modal{
-    -webkit-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
-    -moz-box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
-    box-shadow: rgb(0 0 0 / 75%) 0px 3px 10px;
-} */
+.trailer-modal{
+    transform-origin: center center;
+    animation: headerNotyGrowth ease .3s;
+    will-change: transform,opacity;
+    width: 140%;
+    height: 120%;
+    left: -18%;
+    top: -18%;
+}
+.image-item:hover .image{
+    visibility: hidden;
+}
 .react-multi-carousel-list{
     overflow: unset !important;    
 }
 .react-multi-carousel-list:hover .react-multiple-carousel__arrow{
     display: block;
 }
-.image-item{
-    transition: transform .4s;
+
+.image-item:hover{
+    z-index: 1;
 }
 .image{
     height: 100%;
@@ -100,5 +108,5 @@
 .traileModalBtn{
     /* padding: 4px 6px; */
     border: rgba(255,255,255,.5) solid 2px;
-    border-radius: 15px;
+    border-radius: 18px;
 }
