--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -90,10 +90,10 @@
 .image{
     height: 100%;
 }
-.react-player{
+/* .react-player{
     width: 100% !important;
     height: 100% !important;
-}
+} */
 .soundClass{
     right: 7vw;
     bottom: 17.5vw;
@@ -101,6 +101,10 @@
     border: white solid;
     border-radius: 40px;
     position: absolute;
+}
+.DetailVolumnClass{
+    bottom: 6.5vw;
+    display: block;
 }
 .bannerOverView{
     visibility: hidden !important;
@@ -127,5 +131,19 @@
     /* border: rgba(255,255,255,.5) solid 2px; */
     /* background-color: rgba(42,42,42,.6); */
     border: rgba(255,255,255,.5) solid 2px;
-    border-radius: 18px;
+    border-radius: 25px;
+}
+.detailModalBtn{
+    /* padding: 4px 6px; */
+    /* border: rgba(255,255,255,.5) solid 2px; */
+    /* background-color: rgba(42,42,42,.6); */
+    border: rgba(255,255,255,.5) solid 2px;
+    border-radius: 25px;
+}
+.customVideo{
+    bottom: 0;
+}
+.customVideo div{
+    height: 120% !important;
+    top: -120px;
 }
