--- a/src/styles/Components.css
+++ b/src/styles/Components.css
@@ -4,7 +4,6 @@
     padding-left: 0.2vw;
     padding-right: 0.2vw;
     cursor: pointer;
-    width: 14.93vw !important;
 }
 .react-multiple-carousel__arrow--left{
     left: 0vw;
@@ -142,4 +141,142 @@
     visibility: visible;
     opacity: 1;
     transition: opacity 0.5s linear;
+}
+/* Laptop Responsive */
+@media only screen and (min-width: 1024px) {
+    .react-multi-carousel-item{
+        width: 14.93vw !important;
+    }
+    .row-Title{
+        font-size: 1.4vw;
+    }
+    .menu-navbar{
+        display: none;
+    }
+}
+/* Big Tablet Responsive  */
+@media only screen and (min-width: 801px ) and (max-width: 1024px) {
+    .react-multi-carousel-item{
+        width: 21.72vw !important;
+    }
+    .row-Title{
+        font-size: 2.5vw;
+    }
+    .allRowVideo{
+        visibility: unset;
+        opacity: 1;
+        margin-left: 1vw;
+    }
+    .bannerOverViewA{
+        display: none;
+    }
+    .logo-navbar{
+        width: 10vw;
+        height: 3vh;
+    }
+    .bannerTextA{
+        width: 70%;
+        font-size: 6vw;
+    }
+    .navbar{
+        height: 6vh;
+    }
+    .menu-navbar{
+        display: none;
+    }
+
+}
+/* Tablet Responsive  */
+@media only screen and (min-width: 501px ) and (max-width: 800px) {
+    .react-multi-carousel-item{
+        width: 28vw !important;
+    }
+    .row-Title{
+        font-size: 3.2vw;
+    }
+    .allRowVideo{
+        visibility: unset;
+        opacity: 1;
+        margin-left: 1vw;
+    }
+    .bannerOverViewA{
+        display: none;
+    }
+    .logo-navbar{
+        width: 12vw;
+        height: 3vh;
+    }
+    .bannerTextA{
+        width: 70%;
+        font-size: 6vw;
+    }
+    .navbar{
+        height: 6vh;
+    }
+    .tag-navbar{
+        display: none;
+    }
+    .right-navbar{
+        display: none;
+    }
+}
+/* Mobile Responsive  */
+@media only screen and (min-width: 0 ) and (max-width: 500px) {
+    .react-multi-carousel-item{
+        width: 44.5vw !important;
+    }
+    .row-Title{
+        font-size: 4.5vw;
+    }
+    .allRowVideo{
+        visibility: unset;
+        opacity: 1;
+        margin-left: 1vw;
+    }
+    .bannerOverViewA{
+        display: none;
+    }
+    .logo-navbar{
+        width: 20vw;
+        height: 3vh;
+    }
+    .bannerTextA{
+        width: 60%;
+        font-size: 6vw;
+        text-align: center;
+        margin: 0;
+    }
+    .play-button{
+        width: 20vw;
+        height: 3vh;
+    }
+    .info-button{
+        display: none;
+    }
+    .info-container{
+        bottom: 15%;
+        align-items: center;
+    }
+    .age-tag{
+        display: none;
+    }
+    .button-tittle{
+        font-size: 4vw ;
+    }
+    .icon-classes{
+        width: 4vw;
+        height: 2vh;
+    }
+    .navbar{
+        height: 6vh;
+    }
+    .tag-navbar{
+        display: none;
+    }
+    .right-navbar{
+        display: none;
+    }
+    .menu-navbar{
+        height: 3vh;
+    }
 }
