--- a/src/styles/Components.css
+++ b/src/styles/Components.css
@@ -171,15 +171,15 @@
         display: none;
     }
     .logo-navbar{
-        width: 10vw;
-        height: 3vh;
+        width: 11vw;
+        height: 4vh;
     }
     .bannerTextA{
         width: 70%;
         font-size: 6vw;
     }
     .navbar{
-        height: 6vh;
+        height: 8vh;
     }
     .menu-navbar{
         display: none;
@@ -194,30 +194,31 @@
     .row-Title{
         font-size: 3.2vw;
     }
-    .allRowVideo{
-        visibility: unset;
-        opacity: 1;
-        margin-left: 1vw;
-    }
-    .bannerOverViewA{
-        display: none;
-    }
     .logo-navbar{
         width: 12vw;
+        height: 4vh;
+    }
+    .play-button{
+        width: 20vw;
+        height: 7vh;
+    }
+    .icon-classes{
+        width: 4vw;
         height: 3vh;
     }
-    .bannerTextA{
-        width: 70%;
-        font-size: 6vw;
+    .info-container{
+        bottom: -2vh;
+        align-items: center;
+    }
+    .banner-fade{
+        bottom: -5vh;
     }
     .navbar{
-        height: 6vh;
+        height: 8vh;
     }
-    .tag-navbar{
-        display: none;
-    }
-    .right-navbar{
-        display: none;
+    .menu-navbar{
+        width: 4vw;
+        height: 4vw;
     }
 }
 /* Mobile Responsive  */
@@ -228,6 +229,33 @@
     .row-Title{
         font-size: 4.5vw;
     }
+    .logo-navbar{
+        width: 20vw;
+        height: 3vh;
+    }
+    .info-container{
+        bottom: -1vh;
+        align-items: center;
+    }
+    .menu-navbar{
+        height: 3vh;
+    }
+    .banner-fade{
+        bottom: -5vh;
+    }
+    .play-button{
+        width: 20vw;
+        height: 3vh;
+    }
+    .icon-classes{
+        width: 4vw;
+        height: 2vh;
+    }
+    .navbar{
+        height: 12vw;
+    }
+}
+@media only screen and (min-width: 0 ) and (max-width: 800px) {
     .allRowVideo{
         visibility: unset;
         opacity: 1;
@@ -236,39 +264,12 @@
     .bannerOverViewA{
         display: none;
     }
-    .logo-navbar{
-        width: 20vw;
-        height: 3vh;
-    }
     .bannerTextA{
         width: 60%;
         font-size: 6vw;
         text-align: center;
         margin: 0;
-    }
-    .play-button{
-        width: 20vw;
-        height: 3vh;
-    }
-    .info-button{
         display: none;
-    }
-    .info-container{
-        bottom: 15%;
-        align-items: center;
-    }
-    .age-tag{
-        display: none;
-    }
-    .button-tittle{
-        font-size: 4vw ;
-    }
-    .icon-classes{
-        width: 4vw;
-        height: 2vh;
-    }
-    .navbar{
-        height: 6vh;
     }
     .tag-navbar{
         display: none;
@@ -276,7 +277,15 @@
     .right-navbar{
         display: none;
     }
-    .menu-navbar{
-        height: 3vh;
+    .button-tittle{
+        font-size: 4vw ;
+    }
+    
+    
+    .info-button{
+        display: none;
+    }
+    .age-tag{
+        display: none;
     }
 }
